name:              bench
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

executable         bench
    main-is:           yesod.hs
    hs-source-dirs:    src

    ghc-options:       -Wall -threaded -O2 -rtsopts

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                EmptyDataDecls

    build-depends: base                          >= 4          && < 5
                 , yesod                         
                 , yesod-core                   
                 , text                         
                 , persistent                   
                 , persistent-mysql             
                 , persistent-mongoDB           
                 , warp                         
                 , unix                         
                 , network-conduit              
                 , primitive                    
                 , mwc-random                   
                 , pool-conduit                 
                 , network
                 , mongoDB
                 , aeson
